--- a/styles.css
+++ b/styles.css
@@ -623,7 +623,7 @@ footer .container-full {
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 
