change radius on style images

--- a/styles.css
+++ b/styles.css
@@ -279,7 +279,7 @@ footer .container-full {
 
 .style-card .image-placeholder {
     padding-bottom: 100%;
-    border-radius: 5rem;
+    border-radius: 25%;
 }
 
 
