--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@
     /* Other Variables */
     --border-radius: 0.5rem;
     --box-shadow-navbar: 0 0.1rem 0.5rem 0.01rem var(--primary-color);
+    --box-shadow-cta: 0 0.1rem 0.5rem 0.01rem var(--accent-color);
     /* --box-shadow-primary: 0 0 0.3rem var(--primary-color); */
     --box-shadow-primary: 0 0 0.3rem 0.01rem var(--primary-color);
     --box-shadow-secondary: 0 0 0.3rem 0.01rem var(--secondary-color-dark);
@@ -107,29 +108,66 @@ h3 {
 }
 
 #styles,
-#pricing,
+#calendar,
 #contacts,
 footer .container-full {
     background: var(--linear-gradient-text-primary);
 }
 
 #about,
-#calendar,
+
+#pricing,
 #qa {
     background: var(--linear-gradient-text-secondary);
 }
 
-#about>p:first-of-type,
+.teacher-heading,
+.gallery-heading {
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+
+/* #about>p:first-of-type,
 #gallery>p:first-of-type {
     text-align: center;
     font-size: 1.6rem;
     margin-bottom: 1rem;
+} */
+
+
+#cta {
+    margin-top: 3rem;
+    display: inline-block;
+    padding: 0.5rem;
+    background-color: var(--primary-color-dark);
+    color: white;
+    text-decoration: none;
+    /* border: solid var(--accent-color); */
+    border-radius: var(--border-radius);
+    font-size: 1.2rem;
+    cursor: pointer;
+    /* box-shadow: var(--box-shadow-cta); */
+    transition: transform 0.2s ease-in-out;
+    font-weight: bold;
+    font-style: italic;
+}
+
+#cta:hover {
+    text-decoration: none;
+    transform: scale(1.2);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 
 .bigger-text {
     font-size: larger;
 }
+
+
+
 
 .smaller-text {
     font-size: smaller;
@@ -634,7 +672,7 @@ footer .container-full {
     gap: 1rem;
     background-color: var(--background-color);
     border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow-primary);
+    box-shadow: var(--box-shadow-secondary);
     padding: 1.5rem;
     max-width: 300px;
     min-width: 250px;
@@ -656,7 +694,7 @@ footer .container-full {
 .location-heading {
     /* font-size: 1em; */
     color: var(--text-color-secondary);
-    border-bottom: solid 0.2rem var(--primary-color-dark);
+    border-bottom: solid 0.2rem var(--secondary-color-dark);
     text-align: right;
     white-space: nowrap;
 }
@@ -716,14 +754,15 @@ footer .container-full {
 .pricing-summary {
     text-align: center;
     font-size: 1.2rem;
-    line-height: 1.8;
+    line-height: 2;
     margin-top: 1rem;
 }
 
 .pricing-summary span {
-    background-color: var(--secondary-color-dark);
+    background-color: var(--primary-color);
     border-radius: var(--border-radius);
-    padding: 0.2rem;
+    padding-block: 0.2rem;
+    padding-inline: 0.4rem;
     white-space: nowrap;
     font-weight: bold;
 }
@@ -736,7 +775,7 @@ footer .container-full {
     gap: 1rem;
     background-color: var(--background-color);
     border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow-secondary);
+    box-shadow: var(--box-shadow-primary);
     /* padding-block: 1rem; */
     /* flex-basis: 200px; */
     padding-block: 2rem;
@@ -747,7 +786,7 @@ footer .container-full {
 }
 
 .price {
-    background-color: var(--secondary-color-dark);
+    background-color: var(--primary-color);
     border-radius: var(--border-radius);
     padding-inline: 1rem;
     white-space: nowrap;
@@ -791,16 +830,16 @@ footer .container-full {
 
 .available span {
     margin-right: 0.5rem;
-    color: var(--secondary-color-light);
+    color: var(--primary-color-light);
 }
 
 .not-available {
-    color: var(--text-color-dark);
+    color: var(--text-color-secondary);
 }
 
 .not-available span {
     margin-right: 0.5rem;
-    color: var(--secondary-color-dark);
+    color: var(--primary-color-dark);
 }
 
 .payment-methods {
@@ -1055,10 +1094,11 @@ footer .container-full {
         gap: 2rem;
     }
 
-    #about>p:first-of-type,
+    /* #about>p:nth-child(3),
     #gallery>p:first-of-type {
         font-size: 1.2rem;
-    }
+    } */
+
 
     .styles-cards {
         gap: 2rem;
