--- a/styles.css
+++ b/styles.css
@@ -150,15 +150,15 @@ footer .container-full {
     font-size: 1rem;
     cursor: pointer;
     /* box-shadow: var(--box-shadow-cta); */
-    transition: transform 0.2s ease-in-out;
+    /* transition: transform 0.2s ease-in-out; */
     font-weight: bold;
     font-style: italic;
 }
 
 #cta:hover {
     text-decoration: none;
-    transform: scale(1.2);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    /* transform: scale(1.2);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); */
 }
 
 
