--- a/styles.css
+++ b/styles.css
@@ -236,19 +236,27 @@ footer .container-full {
 }
 
 #logo-header {
+    z-index: 1002;
+}
+
+#logo-header:active {
+    transform: scale(0.85);
+}
+
+#logo-header img {
     height: 3rem;
     width: 3rem;
-    z-index: 1000;
     position: relative;
     user-select: none;
-    transition: transform var(--clicked-feedback-time) ease;
+    /* transition: transform var(--clicked-feedback-time) ease; */
+    cursor: pointer;
 }
 
 .nav-links {
     display: flex;
     align-items: flex-end;
     list-style: none;
-    gap: 0.5rem;
+    /* gap: 0.5rem; */
     /* padding: 0.2rem; */
     white-space: nowrap;
 }
@@ -259,6 +267,7 @@ footer .container-full {
     font-weight: bold;
     transition: color var(--transition-duration) ease;
     padding: 0.5rem;
+    margin-inline: 0.5rem;
     user-select: none;
     text-decoration: none;
     transition: transform var(--clicked-feedback-time) ease;
@@ -283,7 +292,7 @@ footer .container-full {
 }
 
 .nav-toggle:active {
-    transform: scale(0.95);
+    transform: scale(0.85);
 }
 
 .nav-svg {
@@ -1077,7 +1086,11 @@ footer .container-full {
     }
 
     .nav-links li {
-        padding: 0.5rem 1rem;
+        /* padding-inline: 1rem; */
+        /* padding-top: 0.5rem; */
+        /* margin-inline: 1rem; */
+        padding-inline: 1rem;
+        /* margin-block: 0.2rem; */
     }
 
 
