--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ a {
     display: inline-block;
     color: var(--accent-color);
     text-decoration: none;
-    transition: transform var(--clicked-feedback-time) ease;
+    transition: all var(--clicked-feedback-time) ease;
     /* Smooth transition */
 }
 
@@ -158,7 +158,7 @@ footer .container-full {
     /* transition: transform 0.2s ease-in-out; */
     font-weight: bold;
     font-style: italic;
-    transition: transform var(--clicked-feedback-time) ease;
+    transition: all var(--clicked-feedback-time) ease;
 }
 
 #cta:active {
@@ -271,7 +271,7 @@ footer .container-full {
     margin-inline: 0.5rem;
     user-select: none;
     text-decoration: none;
-    transition: transform var(--clicked-feedback-time) ease;
+    transition: all var(--clicked-feedback-time) ease;
 }
 
 .nav-links a:active {
@@ -491,13 +491,13 @@ footer .container-full {
     border: none;
     /* overflow: hidden; */
     min-width: 120px;
-    transition: transform var(--clicked-feedback-time) ease;
+    transition: all var(--clicked-feedback-time) ease;
 }
 
 .floating-contact-button:active {
     transform: scale(0.93);
-    background-color: var(--accent-color-bright);
     /* Scale down on press */
+    background-color: var(--accent-color-bright);
 }
 
 .contact-text {
