--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,7 @@ footer .container-full {
     /* transition: transform 0.2s ease-in-out; */
     font-weight: bold;
     font-style: italic;
+    box-shadow: var(--box-shadow-navbar);
     transition: all var(--clicked-feedback-time) ease;
 }
 
