--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,7 @@ footer .container-full {
     margin-top: 2rem;
     display: inline-block;
     padding: 0.5rem;
-    background-color: var(--primary-color-dark);
+    background-color: #2d1644;
     color: white;
     text-decoration: none;
     /* border: solid var(--accent-color); */
@@ -158,7 +158,6 @@ footer .container-full {
     /* transition: transform 0.2s ease-in-out; */
     font-weight: bold;
     font-style: italic;
-    box-shadow: var(--box-shadow-navbar);
     transition: all var(--clicked-feedback-time) ease;
 }
 
