--- a/styles.css
+++ b/styles.css
@@ -317,37 +317,15 @@ footer .container-full {
     stroke-dashoffset: -90;
 }
 
-
 .image-placeholder {
     position: relative;
     width: 100%;
-    height: auto;
-    padding-bottom: 60%;
+    padding-bottom: 56.25%;
+    /* Maintain aspect ratio */
     border-radius: var(--border-radius);
     overflow: hidden;
+    background-color: rgb(12, 12, 12);
     text-align: center;
-}
-
-.teacher .image-placeholder {
-    padding-bottom: 100%;
-}
-
-.style-card .image-placeholder {
-    padding-bottom: 100%;
-    border-radius: 25%;
-}
-
-lite-youtube .image-placeholder {
-    padding-bottom: 0%;
-}
-
-lite-youtube .image-placeholder.loaded {
-    z-index: -1;
-}
-
-
-.teacher .image-placeholder::before {
-    border-radius: 50%;
 }
 
 .image-placeholder::before {
@@ -355,27 +333,52 @@ lite-youtube .image-placeholder.loaded {
     position: absolute;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--background-color);
-    opacity: 1;
-    transition: opacity var(--transition-duration) ease;
-    z-index: 1;
-}
-
-.image-placeholder.loaded::before {
-    opacity: 0;
 }
 
 .image-placeholder img {
     position: absolute;
-    /* inset: 0; */
     width: 100%;
-    /* height: 100%; */
     object-fit: cover;
+}
+
+
+.lazy-load {
+    opacity: 0;
+    aspect-ratio: 16/9;
+    object-fit: cover;
+    transition: opacity var(--transition-duration-longer) ease-in;
+}
+
+.lazy-load.loaded {
+    opacity: 1;
+}
+
+.teacher .image-placeholder {
+    padding-bottom: 100%;
+    border-radius: 50%;
+}
+
+.teacher .lazy-load,
+.style-card .lazy-load {
+    aspect-ratio: 1/1;
+}
+
+.style-card .image-placeholder {
+    padding-bottom: 100%;
+    border-radius: 25%;
+}
+
+
+
+
+
+.teacher .image-placeholder::before {
+    border-radius: 50%;
 }
 
 .scroll-down {
@@ -432,7 +435,7 @@ lite-youtube .image-placeholder.loaded {
     inset: 0;
     background-color: var(--background-color);
     z-index: -1;
-    transition: opacity var(--transition-duration-longer) ease;
+    transition: opacity var(--transition-duration-longer) ease-out;
 }
 
 #home.loaded::before {
@@ -894,31 +897,46 @@ lite-youtube .image-placeholder.loaded {
 
 
 lite-youtube {
-    max-height: 720px;
+    position: relative;
     width: 100%;
     max-width: var(--viewport-width-desktop) !important;
-    margin-inline: auto;
-    border-radius: var(--border-radius);
+    border-radius: var(--border-radius) !important;
     background-image: none !important;
-    background-color: none !important;
+    background-color: black !important;
+    /* cursor: auto; */
     display: flex !important;
-    position: relative;
     z-index: 1;
+    pointer-events: none;
 }
 
 
-lite-youtube img {
-    width: 100%;
-    height: 100%;
+lite-youtube::before {
+    overflow: visible !important;
+    white-space: wrap !important;
+    z-index: -1 !important;
+    transition: opacity var(--transition-duration-longer) ease-in !important;
+    opacity: 0;
 }
 
-.lyt-playbtn {
+lite-youtube .lyt-playbtn {
     filter: none !important;
-    transition: none !important;
+    z-index: -1 !important;
+    transition: opacity var(--transition-duration-longer) ease-in !important;
+    opacity: 0;
 }
 
-.lyt-visually-hidden {
+lite-youtube .lyt-visually-hidden {
     display: none !important;
+}
+
+lite-youtube.img-ready {
+    pointer-events: auto;
+}
+
+lite-youtube.img-ready::before,
+lite-youtube.img-ready .lyt-playbtn {
+    z-index: 1 !important;
+    opacity: 1;
 }
 
 /* Questions Section */
