--- a/styles.css
+++ b/styles.css
@@ -420,14 +420,14 @@ footer .container-full {
 
 #home {
     background-color: var(--background-color);
-    background-position: top center;
+    background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-clip: padding-box;
     position: relative;
     z-index: 0;
     text-align: center;
-    background-size: cover;
+    background-size: contain;
 }
 
 #home::before {
@@ -1071,6 +1071,13 @@ footer .container-full {
         font-size: 1.5rem;
     }
 
+    #home {
+        background-position: top center;
+    }
+
+    .home-container {
+        justify-content: center;
+    }
 
     .home-container p:first-of-type {
         font-size: 1.5rem;
