--- a/styles.css
+++ b/styles.css
@@ -340,13 +340,13 @@ footer .container-full {
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
 .image-placeholder img {
     position: absolute;
     width: 100%;
     object-fit: cover;
+    /* aspect-ratio: 16/9; */
 }
 
 
@@ -369,13 +369,17 @@ footer .container-full {
     padding-bottom: 63%;
 }
 
-lite-youtube .image-placeholder {
-    margin-block: 0.2rem;
-    aspect-ratio: 16/9;
-}
-
 .gallery-container .image-placeholder {
     padding-bottom: 64%;
+}
+
+.gallery-container lite-youtube .image-placeholder {
+    margin-block: 0.2rem;
+    padding-bottom: 56.25%;
+}
+
+lite-youtube img {
+    height: 100%;
 }
 
 .teacher .lazy-load,
