use same positioning for scroll down icon on different medias

--- a/styles.css
+++ b/styles.css
@@ -1177,7 +1177,7 @@ footer .container-full {
     }
 
     .scroll-down {
-        bottom: 2.5rem;
+        /* bottom: 2.5rem; */
     }
 
     .scroll-down img {
