--- a/styles.css
+++ b/styles.css
@@ -948,6 +948,119 @@ lite-youtube.img-ready .lyt-playbtn {
     opacity: 1;
 }
 
+/* Carousel Section */
+.carousel {
+    position: relative;
+    width: 100%;
+    /* margin: 2rem auto; */
+    /* overflow: hidden; */
+}
+
+.carousel-container {
+    display: flex;
+    transition: transform var(--transition-duration) ease;
+    /* margin: 0 -10%; */
+    /* width: 110%; */
+    margin-inline: 5%;
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* gap: 2rem; */
+}
+
+.carousel-slide {
+    min-width: 100%;
+    height: 100%;
+    position: relative;
+    /* padding: 0 10%; */
+    opacity: 0.3;
+    /* padding: 0.2rem; */
+    transition: opacity var(--transition-duration-fast) ease;
+    pointer-events: none;
+    /* backdrop-filter: blur(20px); */
+    filter: blur(4px);
+    /* Prevent interaction with non-active slides */
+}
+
+
+.carousel-slide.active {
+    opacity: 1;
+    pointer-events: auto;
+    filter: none;
+    /* Enable interaction only for active slide */
+}
+
+.carousel-navigation {
+    position: absolute;
+    top: 40%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    pointer-events: none;
+    z-index: 2;
+    padding: 0 2%;
+}
+
+.carousel-slide .image-placeholder {
+    transform: scale(0.9);
+    transition: transform var(--transition-duration) ease;
+}
+
+.carousel-slide.active .image-placeholder {
+    transform: scale(1);
+}
+
+.carousel-dots {
+    display: flex;
+    justify-content: center;
+    gap: 0.5rem;
+    padding-block: 1rem;
+    max-width: 100%;
+}
+
+.carousel-dot {
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    background: var(--text-color-secondary);
+    cursor: pointer;
+    transition: transform var(--transition-duration) ease,
+        background-color var(--transition-duration) ease;
+}
+
+.carousel-dot.active {
+    background: var(--text-color);
+    transform: scale(1.2);
+}
+
+.carousel-button {
+    width: 5rem;
+    height: 5rem;
+    border: none;
+    margin-inline: 3rem;
+    background: rgba(0, 0, 0, 0.7);
+    color: var(--text-color);
+    cursor: pointer;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    pointer-events: auto;
+    font-size: 1.5rem;
+    font-weight: bold;
+    transition: all var(--transition-duration) ease;
+}
+
+.carousel-button:hover {
+    background: rgba(0, 0, 0, 0.9);
+    transform: scale(1.1);
+}
+
+.carousel-button:active {
+    transform: scale(0.90);
+}
+
+
+
 /* Questions Section */
 .qa-container {
     display: flex;
@@ -1185,6 +1298,28 @@ footer .container-full {
     lite-youtube::before {
         font-size: 0.8rem;
     }
+
+    .carousel-container {
+        /* margin-inline: -10%; */
+        /* width: 110%; */
+        margin-inline: 4%;
+    }
+
+    .carousel-dots {
+        margin-block: 0.5rem;
+    }
+
+    .carousel-dot {
+        width: 0.8rem;
+        height: 0.8rem;
+    }
+
+    .carousel-button {
+        width: 2.5rem;
+        height: 2.5rem;
+        margin-inline: 1rem;
+    }
+
 }
 
 
